test/corpus/module-declaration.txt
===================
Module declaration
===================

module myModule

---
(source_file
    (module_declaration
        name: (identifier)))

===================
Module declaration without newlines
===================
module myModule
---
(source_file
    (module_declaration
        name: (identifier)))
